fixed spacing

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -296,8 +296,8 @@ input {
 .tOut
 	width 90%
 	float left
-	display: inline-block;
 	margin-left 0
+	display inline-flex
 	border-radius 2px
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
